# mocktioneer

./: .dockerignore  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  TODO.md  anyedge.toml  edgezero.toml  fastly.toml  mocktioneer.toml
.cargo/: config.local-example  config.toml  config.toml.local
.claude/: settings.json
.claude/agents/: build-validator.md  code-architect.md  code-simplifier.md  issue-creator.md  pr-creator.md  pr-reviewer.md  repo-explorer.md  verify-app.md
.claude/commands/: check-ci.md  review-changes.md  test-all.md  test-crate.md  verify.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  story.yml  task.yml
.github/workflows/: codeql.yml  deploy-cloudflare.yml  deploy-docs.yml  docker.yml  format.yml  test.yml
crates/mocktioneer-adapter-axum/: Cargo.toml  axum.toml
crates/mocktioneer-adapter-axum/src/: main.rs
crates/mocktioneer-adapter-cloudflare/: Cargo.toml  wrangler.toml
crates/mocktioneer-adapter-cloudflare/src/: lib.rs  main.rs
crates/mocktioneer-adapter-fastly/: Cargo.toml  fastly.toml
crates/mocktioneer-adapter-fastly/.cargo/: config.toml
crates/mocktioneer-adapter-fastly/src/: main.rs
crates/mocktioneer-adapter-spin/: Cargo.toml  spin.toml
crates/mocktioneer-adapter-spin/src/: lib.rs
crates/mocktioneer-cloudflare/: Cargo.toml  wrangler.toml
crates/mocktioneer-cloudflare/src/: main.rs
crates/mocktioneer-core/: Cargo.toml
crates/mocktioneer-core/src/: aps.rs  auction.rs  config.rs  lib.rs  mediation.rs  openrtb.rs  render.rs  routes.rs  verification.rs
crates/mocktioneer-core/static/templates/: click.html  click.html.hbs  creative.html  creative.html.hbs  iframe-with-metadata.html.hbs  iframe.html.hbs  image.svg.hbs  info.html
crates/mocktioneer-core/tests/: aps_endpoints.rs  endpoints.rs
crates/mocktioneer-fastly/: Cargo.toml  fastly.toml
crates/mocktioneer-fastly/src/: main.rs
docs/: .prettierrc  eslint.config.js  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: aps-bid.md  aps-win.md  creatives.md  index.md  mediation.md  openrtb-auction.md  resolve.md  sync.md  tracking.md
docs/guide/: architecture.md  configuration.md  getting-started.md  index.md  what-is-mocktioneer.md
docs/guide/adapters/: axum.md  cloudflare.md  fastly.md  index.md
docs/integrations/: index.md  prebid-server.md  prebidjs.md  trusted-server.md
examples/: aps_request.sh  curl_local_test.sh  iframe_request.sh  openrtb_request.json  openrtb_request.sh  pixel_request.sh  register_partner.sh  request_banner.json
src/: auction.rs  config.rs  lib.rs  main.rs  openrtb.rs  render.rs  routes.rs
static/templates/: banner_adm.html  click.html  creative.html  iframe.html
tests/playwright/: README.md  creative-visibility.test.ts  package-lock.json  package.json  playwright.config.ts
