[workspace]
members = [
  "crates/mocktioneer-core",
  "crates/mocktioneer-adapter-fastly",
  "crates/mocktioneer-adapter-cloudflare",
  "crates/mocktioneer-adapter-axum",
]
resolver = "2"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace.dependencies]
edgezero-adapter-cloudflare = { git = "ssh://git@github.com/stackpop/edgezero.git", package = "edgezero-adapter-cloudflare", default-features = false }
edgezero-adapter-fastly = { git = "ssh://git@github.com/stackpop/edgezero.git", package = "edgezero-adapter-fastly", default-features = false }
edgezero-adapter-axum = { git = "ssh://git@github.com/stackpop/edgezero.git", package = "edgezero-adapter-axum", default-features = false }
edgezero-cli = { git = "ssh://git@github.com/stackpop/edgezero.git", package = "edgezero-cli" }
edgezero-core = { git = "ssh://git@github.com/stackpop/edgezero.git", package = "edgezero-core" }
async-trait = "0.1"
fastly = "0.11.9"
futures = { version = "0.3", features = ["std", "executor"] }
handlebars = "6"
log = { version = "0.4", features = ["serde"] }
mocktioneer-core = { path = "crates/mocktioneer-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
serde_repr = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
axum = "0.8"
uuid = { version = "1", features = ["v7"] }
validator = { version = "0.20", features = ["derive"] }
worker = { version = "0.6", features = ["http"] }
tracing = "0.1"
ed25519-dalek = "2.1"
base64 = "0.22"
thiserror = "1.0"
url = "2"
futures-util = "0.3.31"
