[workspace]
members = [
  "crates/mocktioneer-core",
  "crates/mocktioneer-adapter-fastly",
  "crates/mocktioneer-adapter-cloudflare",
  "crates/mocktioneer-adapter-axum",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
ed25519-dalek = "2.1"
edgezero-adapter-axum = { git = "https://github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-axum", default-features = false }
edgezero-adapter-cloudflare = { git = "https://github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-cloudflare", default-features = false }
edgezero-adapter-fastly = { git = "https://github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-fastly", default-features = false }
edgezero-cli = { git = "https://github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-cli" }
edgezero-core = { git = "https://github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-core" }
fastly = "0.11.9"
futures = { version = "0.3", features = ["std", "executor"] }
futures-util = "0.3.31"
handlebars = "6"
log = { version = "0.4", features = ["serde"] }
mocktioneer-core = { path = "crates/mocktioneer-core" }
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
simple_logger = "5"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v7", "js"] }
validator = { version = "0.20", features = ["derive"] }
worker = { version = "0.7", features = ["http"] }
