[package]
name = "mocktioneer-adapter-cloudflare"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mocktioneer-adapter-cloudflare"
path = "src/main.rs"

[features]
default = ["cloudflare"]
cloudflare = ["dep:anyedge-adapter-cloudflare"]

[dependencies]
anyedge-adapter-cloudflare = { workspace = true, optional = true }
mocktioneer-core = { workspace = true }
worker = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyedge-adapter-cloudflare = { workspace = true, features = ["cloudflare"] }
anyedge-core = { workspace = true }
