[package]
name = "mocktioneer-adapter-fastly"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true

[[bin]]
name = "mocktioneer-adapter-fastly"
path = "src/main.rs"

[features]
default = []
fastly = ["dep:edgezero-adapter-fastly"]

[dependencies]
edgezero-adapter-fastly = { workspace = true, optional = true }
log = { workspace = true }
mocktioneer-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-fastly = { workspace = true, features = ["fastly"] }
edgezero-core = { workspace = true }
fastly = { workspace = true }
