[package]
name = "mocktioneer-cloudflare"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mocktioneer-cloudflare"
path = "src/main.rs"

[dependencies]
mocktioneer-core = { path = "../mocktioneer-core" }
anyedge-cloudflare = { path = "../../../anyedge/crates/anyedge-cloudflare", features = ["workers"] }
worker = "0.6"

