[package]
name = "mocktioneer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyedge-core = { path = "../../../anyedge/crates/anyedge-core" }
handlebars = "6"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.9"
uuid = { version = "1", features = ["v7"] }
validator = { version = "0.20", features = ["derive"] }
