[package]
name = "mocktioneer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyedge-core = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
