[package]
name = "mocktioneer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
edgezero-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
phf = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
